@@ -1,7 +1,7 @@
 /******************************************************************************
- *  utilfuns.h	- utility function prototypes
+ *  utilxml.h   - definition of class that deal with xml constructs 
  *
- * $Id: utilfuns.h,v 1.2 2003/06/01 14:32:09 joachim Exp $
+ * $Id: utilweb.h,v 1.1 2003/06/01 14:32:09 joachim Exp $
  *
  * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
  *	CrossWire Bible Society
@@ -18,12 +18,23 @@
  * General Public License for more details.
  *
  */
-#ifndef UTILFUNS_H
-#define UTILFUNS_H
 
+#ifndef UTILWEB_H
+#define UTILWEB_H
 
-#include <utilstr.h>
-#include <utilconf.h>
-#include <utilweb.h>
+#include <defs.h>
+#include <string>
+
+SWORD_NAMESPACE_START
+
+/** Encodes and URL
+* Encodes a string into a valid URL, e.g. changes http://www.crosswire.org/test.jsp?force=1&help=1 into
+* http://www.crosswire.org/test.jsp?force=1&amp;help=1
+* This function works on the data of the buf parameter.
+*/
+const std::string encodeURL( const std::string& buf );
+
+SWORD_NAMESPACE_END
 
 #endif
+
